After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 775310 - playbin: Fix caps memory leak in usage of gst_static_caps_get() API
playbin: Fix caps memory leak in usage of gst_static_caps_get() API
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.9.1
Other Linux
: Normal normal
: 1.11.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-11-29 11:20 UTC by Garima
Modified: 2016-11-29 11:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch is attached for the caps memory leak fix in gstplaybin2.c (704 bytes, patch)
2016-11-29 11:20 UTC, Garima
committed Details | Review

Description Garima 2016-11-29 11:20:33 UTC
Created attachment 340968 [details] [review]
patch is attached for the caps memory leak fix in gstplaybin2.c

In gst/playback/gstplaybin2.c
Function: autoplug_select_cb()
memory is allocated to local variable 'raw_caps' at line:4707 and line:4708 in an 'if block'. Block ends at line:4737 but memory is not freed.

Applied Fix: Before the if block ends memory is released by adding:
gst_caps_unref (raw_caps);

Patch is attached for the same fix.
Comment 1 Sebastian Dröge (slomo) 2016-11-29 11:42:57 UTC
commit 6c5381eda69129a64f10161d337ebd73bc08dc63
Author: Garima Gaur <garima.g@samsung.com>
Date:   Tue Nov 29 16:37:50 2016 +0530

    playbin: Fix caps memory leak in usage of gst_static_caps_get() API
    
    https://bugzilla.gnome.org/show_bug.cgi?id=775310