playbin: Fix caps memory leak in usage of gst_static_caps_get() API

https://bugzilla.gnome.org/show_bug.cgi?id=775310